<resources>
    <string name="app_name">Board2DeathApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_title">Add title</string>
    <string name="description">Description</string>
    <string name="add_game_button">+</string>
    <string name="title_boardgame">Board Games</string>
    <string name="title_chat">Chat</string>
    <string name="title_groups">Groups</string>
    <string name="title_newsletter">Newsletter</string>
    <string name="title_calendar">Calendar</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reAuthenticate">Re-Authenticate</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="my_groups">My Groups</string>
    <string name="all_groups">All Groups</string>
    <string name="player_count">Player Count</string>
    <string name="update_newsletter">Update Newsletter</string>
    <string name="edit_group">Edit Group</string>
    <string name="location">Location</string>
    <string name="game">Game</string>
    <string name="group_name">Group Name</string>
    <string name="group_size">Group Size</string>
    <string name="update_boardgame">Update Board Game</string>
    <string name="name">Name</string>
    <string name="playtime">Play Time</string>
    <string name="add_boardgame">Add A Board Game</string>
    <string name="club_game">Club Game?</string>
    <string name="allday">All-Day</string>
    <string name="add_group">Add A Group</string>
    <string name="game_time">Game Time</string>
    <string name="my_games">My Games</string>
    <string name="all_games">All Games</string>
    <string name="club_games">Club Games</string>
    <string name="name_colon">Name: </string>
    <string name="duration_colon">Duration: </string>
    <string name="description_colon">Description: </string>
    <string name="owner_colon">Owner: </string>
    <string name="player_count_colon">Player Count: </string>
    <string name="location_colon">Location: </string>
    <string name="players_colon">Players: </string>
    <string name="date_colon">Date: </string>
    <string name="group_name_colon">Group Name: </string>
    <string name="group_size_colon">Group Size: </string>
    <string name="game_colon">Game: </string>
</resources>
