<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_newsletter"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="@string/title_newsletter" />

    <item
        android:id="@+id/navigation_boardgame"
        android:icon="@mipmap/dice_24"
        android:title="@string/title_boardgame"/>

    <item
        android:id="@+id/navigation_title_calendar"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/title_calendar"/>

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_groups"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat"/>
</menu>
