<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_boardgame"
        android:textAlignment="center"
        android:textFontWeight="2"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/a_game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name"
        />
    <EditText
        android:id="@+id/a_game_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/description"
        />
    <EditText
        android:id="@+id/a_game_count"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/player_count"/>
    <EditText
        android:id="@+id/a_game_time"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/playtime"/>
    <LinearLayout
        android:id="@+id/check_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/club_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/club_game"/>
    </LinearLayout>
</LinearLayout>