<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserUpdate">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="5dp"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=""
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:id="@+id/editTextUsername"
                android:inputType="textPersonName"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:id="@+id/editTextPassword"
                android:inputType="textPassword"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:hint="@string/password"
                android:id="@+id/editTextPasswordConfirm"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_marginEnd="25dp"
                    android:id="@+id/buttonUpdate"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_marginStart="25dp"
                    android:id="@+id/buttonDelete"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>