<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.groups.DetailedGroupFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:text="@string/name_colon"/>
            <TextView
                android:id="@+id/gameName"
                android:layout_width="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:text="@string/owner_colon"/>
            <TextView
                android:id="@+id/gameOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:text="@string/player_count_colon"/>
            <TextView
                android:id="@+id/gameCount"
                android:layout_width="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:text="@string/duration_colon"/>
            <TextView
                android:id="@+id/gameTime"
                android:layout_width="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:text="@string/description_colon"/>
            <TextView
                android:id="@+id/gameDescription"
                android:layout_width="wrap_content"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>